<resources>
    <string name="app_name">Hint</string>
    <string name="app_name_with_padding">Hint&#x200A;</string>

    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="accept_word">Accept Word?</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="round">Round</string>
    <string name="restart_game">Restart Game</string>
    <string name="restart_button">Restart</string>
    <string name="resume_game">Resume Game</string>
    <string name="menu">Menu</string>
    <string name="pass_phone_across">
        Pass phone across the table and click continue!
    </string>
    <string name="pass_phone_next">
        Pass phone to the opponent next to you and click continue!
    </string>
    <string name="continue_button">Continue</string>
    <string name="winner_announcement">The Winner Is:</string>
    <string name="its_a_tie">It\'s a Tie!!!</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="begin_game">Begin Game</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="view_score">View Score</string>
    <string name="score">Score</string>
    <string name="dismiss">Dismiss</string>
    <string name="help">Help</string>
    <string name="tap_to_reveal">Tap to reveal</string>
    <string name="default_timer_val">00</string>
    <string name="pause">Pause</string>
    <string name="overview_slash_gameplay">Overview/Gameplay</string>
    <string name="overview_body">Hint is a fun and challenging game designed for 4 players (2 teams of 2). The object of the game is to manage to get your partner to guess an assigned word using only a single word Hint!   You may not converse with your partner about the word. You may only say your single word HINT. You can say it with special voice inflection if you want to, but that is all.  If your partner does not guess the word, then you pass the phone to the other person and they will have the chance to do the same thing, but for less points. This continues until either someone guesses the word or there are no more points to be won!  To make clear whose turn it is, each set of partners will have a Person A and Person B. Usually if possible, the two A\'s will sit together across from their B partners. Thus the phone will be passed back and forth between the 2 A\'s until one of them manages to get their B partner to guess the word. At that point, the phone is passed over to the B\'s who will now do the same with a new word.  There are 6 rounds in total in the game. Each round has two parts, in one part the A\'s will have a turn to give HINTS, then the B\'s.</string>
    <string name="strategy_title" >Strategy</string>
    <string name="strategy_body">"The idea is to be able to assess how many hints it will take to guess a particular word. If you give a great hint and your partner ALMOST guesses it....then you may have inadvertently setup the other team for victory! "</string>
    <string name="taking_turn_title">Taking your turn</string>
    <string name="taking_turn_body">Before a round may begin, the two opponents who are going to be giving the hints, must agree upon the word to be used. For example, let\'s say that the A\'s are giving the hints this round. Both of the A\'s will look at the phone and see if the word is guessable, if so, they will tap accept and the round begins. At that point, the first A will give a hint, and then the other A and so on. Note: You MAY skip a word if you and your opponent agree upon it, but beware that if you skip a word, you may not go back to it and furthermore you and your opponent have only 5 skips per game, so together you must spend them wisely! Don\'t skip a word just because it looks challenging! That\'s part of the fun!  In order to keep track of who\'s turn it is, look at the status bar at the bottom of the screen that tells you if the A\'s or the B\'s are giving HINTS, as well as which Team\'s A is currently giving the HINT.</string>
    <string name="download_error">Could not get words! Please ensure that you have an internet connection and that the app is up to date!</string>
    <string name="current_score">Current Score!</string>
    <string name="current_word">Current Word</string>
    <string name="objective_1_of_3_cont">The object of the game is to manage to get your partner to guess an assigned word using only a single word Hint! You may not converse with your partner about the word. You may only say your single word HINT. You can say it with special voice inflection if you want to, but that is all.</string>
    <string name="objective_1_of_3_title">Objective (1/3)</string>
    <string name="objective_2_of_3_title">Objective (2/3)</string>
    <string name="objective_2_of_3_cont">There are 2 teams of two people. Each team has a person A and a person B. The 2 A\'s sit side by side, facing their B partners.</string>
    <string name="objective_3_of_3_title">Objective (3/3)</string>
    <string name="objective_3_of_3_cont">You and the same-lettered opponent next to you will alternate trying to get your partners to guess the same word. The one who acheives it gets the points!</string>
    <string name="next">Next</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="round_number">Round Number</string>
    <string name="round_number_cont">Here you can see what round you are currently in. There are 6 total. In each round the A\'s have a chance to give Hints and the B\'s as well!</string>
    <string name="current_score_cont">Here you can see what the current score is!</string>
    <string name="word_to_guess">Word to Guess</string>
    <string name="word_to_guess_cont">This is the word your partner must guess.</string>
    <string name="word_cover_title">Word Cover</string>
    <string name="word_cover_cont">Only you and the opponent sitting next to you may see the word. So this cover appears to hide he word. Simply press and hold to reveal the word.</string>
    <string name="current_players_cont">Which 2 are currently giving hints to get their partners to guess the word. (the A\'s or the B\'s).</string>
    <string name="whos_turn_title">Who\'s turn is it?</string>
    <string name="whos_turn_cont">The team trying to get the points at the moment.</string>
    <string name="is_it_guessable">Is it even guessable??</string>
    <string name="is_it_guessable_cont">Occasionally an impossible word may pop up. Before beginning the round, you and the opponent next to you must silently agree that the word is guessable (if you two are willing to play the word).</string>
    <string name="not_guessable">Not guessable!</string>
    <string name="not_guessable_cont">If you and your opponent decide the word is not guessable simply swipe it to the left.</string>
    <string name="swipe_limit_title">Swipe Limit</string>
    <string name="swipe_limit_cont">Feel free to swipe, but be aware that you and your opponent only have 5 skips per game!</string>
    <string name="accept_button_title">Accept Button</string>
    <string name="accept_button_cont">Once the two of you decide the word is guessable, you begin the round by clicking here!</string>
    <string name="timer_title">Timer</string>
    <string name="timer_cont">You have 30 seconds in total to give your one word hint and for your partner to guess.</string>
    <string name="mark_answer_title">Mark Your Answer</string>
    <string name="mark_answer_cont">Once your partner has guessed, immediately mark here whether the answer was correct or not.</string>
    <string name="time_limit_cont">If you don\'t finish before time is up, it\'s automatically wrong!</string>
    <string name="if_wrong_1_of_3_title">If you\'re wrong…(1/3)</string>
    <string name="if_wrong_2_of_3_title">If you\'re wrong…(2/3)</string>
    <string name="if_wrong_1_of_3_cont">The possible points to be won decreases</string>
    <string name="if_wrong_2_of_3_cont">Now pass the phone to the oponent sitting next to you.</string>
    <string name="if_wrong_3_of_3_title">If you\'re wrong…(3/3)</string>
    <string name="if_wrong_3_of_3_cont">That person clicks continue and takes his/her turn.</string>
    <string name="if_right_1_of_4_title">If you\'re right…(1/4)</string>
    <string name="if_right_1_of_4_cont">Your team receives the current value of the winnable points spinner</string>
    <string name="if_right_2_of_4_title">If you\'re right…(2/4)</string>
    <string name="if_right_2_of_4_cont">The winnable points reset for the next turn.</string>
    <string name="if_right_3_of_4_title">If you\'re right…(3/4)</string>
    <string name="if_right_3_of_4_cont">Now the other two people give hints (from the A\'s to the B\'s or vice versa).</string>
    <string name="if_right_4_of_4_title">If you\'re right…(4/4)</string>
    <string name="if_right_4_of_4_cont">The other side clicks continue and starts the next round</string>
    <string name="tutorial_complete_title">Tutorial Complete</string>
    <string name="tutorial_complete_cont">You are ready to play the game!</string>
    <string name="begin_game_dismiss">Begin Game!!!</string>
    <string name="point_spinner_title">Point Spinner</string>
    <string name="point_spinner_cont">"This spinner tells you how many points your team will get if your partner guesses the word. With each attempt (of either opponent), the spinner decreases in value! "</string>
    <string name="time_limit_title">Time Limit</string>
    <string name="current_players">Current Players</string>
    <string name="first_time">First Time?</string>
    <string name="would_you_like_to_see_the_tutorial">Would you like to see the tutorial?</string>
    <string name="no">No</string>
    <string name="emphatic_yes">Yes!</string>
    <string name="game_instructions">Game Instructions</string>
    <string name="see_tutorial_again">See Tutorial Again</string>
    <string name="done">Done</string>
</resources>
