<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev.handcraftedsoftware.hint.InstructionsActivity"
    tools:showIn="@layout/activity_instructions">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/overviewTitle"
            style="@style/InstructionsTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_slash_gameplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/overviewBody"
            style="@style/InstructionsBodyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewTitle" />

        <TextView
            android:id="@+id/strategyTitle"
            style="@style/InstructionsTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strategy_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewBody" />

        <TextView
            android:id="@+id/strategyBody"
            style="@style/InstructionsBodyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strategy_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strategyTitle" />

        <TextView
            android:id="@+id/takingTurnTitle"
            style="@style/InstructionsTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taking_turn_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strategyBody" />

        <TextView
            android:id="@+id/takingTurnBody"
            style="@style/InstructionsBodyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taking_turn_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/takingTurnTitle"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tutorialButton"
            style="@style/InstructionsButtonTheme"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/takingTurnBody"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/see_tutorial_again"
            android:textAllCaps="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
