<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_begin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.handcraftedsoftware.hint.BeginActivity">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/team1"
        app:layout_constraintBottom_toTopOf="@+id/team1NameBox"
        app:layout_constraintLeft_toLeftOf="@+id/team1NameBox" />

    <EditText
        android:id="@+id/team1NameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/team1"
        android:imeOptions="flagNoFullscreen|flagNoExtractUi"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <TextView
        android:id="@+id/team2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/team2"
        app:layout_constraintBottom_toTopOf="@+id/team2NameBox"
        app:layout_constraintLeft_toLeftOf="@+id/team2NameBox" />

    <EditText
        android:id="@+id/team2NameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/team2"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/diffGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1NameBox" />

    <Button
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="begin"
        android:text="@string/begin_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/langGroup"
        app:layout_constraintBottom_toTopOf="@+id/diffGroup"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/englishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/english"
            android:textAlignment="viewStart"
            android:layout_gravity="start" />

        <RadioButton
            android:id="@+id/spanishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spanish"
            android:textAlignment="viewStart"
            android:layout_gravity="start"  />
    </RadioGroup>

    <RadioGroup
    android:layout_width="300dp"
    android:layout_height="0dp"
    android:layout_marginStart="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginEnd="16dp"
    app:layout_constraintRight_toRightOf="parent"
    android:id="@+id/diffGroup"
    app:layout_constraintBottom_toTopOf="@+id/beginButton"
    android:layout_marginBottom="32dp"
    android:orientation="horizontal">

        <RadioButton
            android:id="@+id/easyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/hardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard" />
</RadioGroup>

    <ImageButton
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

</androidx.constraintlayout.widget.ConstraintLayout>
